# Inventory-Order-Management

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  PHASE_10_COMPLETION.md  PHASE_11_TO_15_COMPLETION.md  PHASE_16_COMPLETION.md  PHASE_17_COMPLETION.md  PHASE_18_COMPLETION.md  PHASE_19_COMPLETION.md  PHASE_20_COMPLETION.md  PHASE_8_COMPLETION.md  PROJECT_COMPLETION.md  README.md  SALES_LIFECYCLE_TESTING.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2a807872274c_add_platform_infrastructure_tables.py  3cc3593203b9_add_inventory_ledger_tables.py  7f8d3e9a1c42_add_goods_receipt_items.py  8030e74a8d80_add_product_variants_and_price_history.py  81ca58c3f349_add_image_url_to_products.py  89ce5fb5b8e1_add_order_payment_shipment_return_tables.py  9d2f1a6b4c77_backfill_default_product_variants.py  b0ac765d7d6e_add_permissions_and_many_to_many_rbac.py  b50802dd72e7_add_audit_logs_table.py  c862de95bde1_create_core_tables.py  e3bb27781424_add_inventory_engine_tables.py  ebb5909a7a5c_add_supplier_management_tables.py  f3ab9a2dc19b_add_schema_constraints_and_indexes.py
app/: main.py
app/core/: celery.py  config.py  exceptions.py  handlers.py  logging.py  metrics.py  redis.py
docs/: api-design.md  api-guide.md  architecture.md  business-rules.md  database-design.md  demo-guide.md  deployment.md  interview-guide.md  requirements.md  troubleshooting.md  workflows.md
scripts/: docker-entrypoint.sh
tests/: test_complete_sales_lifecycle.py  test_health.py  test_phase10_orders.py  test_phase11_to_15_platform.py  test_phase16_config.py  test_phase17_observability.py  test_phase18_deployment.py  test_phase19_dashboard.py  test_phase20_finalization.py  test_phase8_purchase_orders.py  test_phase9_stock_transfers.py  test_product_variants.py  test_security_hardening.py
(+105 files in other folders)
